# colorfy

./: LICENSE  README.md  __init__.py  core.py  pyproject.toml  setup.py
.github/workflows/: publish.yml  python-package.yml
colorfy/: __init__.py  core.py
