[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "colorfy"
version = "1.0.0"
description = "Простая библиотека для цветного текста в консоли"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name = "zqLinkqn", email = "plip30392@gmail.com" }
]
license = { text = "MIT" }
dependencies = []

[project.urls]
Homepage = "https://github.com/zqLinkqn/colorfy"
